--- a/terraform/frontend/conf/nginx.conf
+++ b/terraform/frontend/conf/nginx.conf
@@ -8,16 +8,21 @@ events {
   worker_connections  1024;
 }
 
+daemon off;
+error_log /dev/stdout info;
+
 http {
   include    conf/mime.types;
   include    /etc/nginx/fastcgi.conf;
   index    index.html index.htm index.php;
 
   default_type application/octet-stream;
+
   log_format   main '$remote_addr - $remote_user [$time_local]  $status '
     '"$request" $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log   logs/access.log  main;
+  access_log   /dev/stdout main;
+
   sendfile     on;
   tcp_nopush   on;
 
