--- a/terraform/frontend/conf/nginx.conf
+++ b/terraform/frontend/conf/nginx.conf
@@ -1,7 +1,7 @@
 worker_processes  5;
 
 error_log  /dev/stdout info;
-pid        logs/nginx.pid;
+pid        /run/nginx/nginx.pid;
 
 worker_rlimit_nofile 8192;
 
