serve regular files from /var/www/html
copy src dir to /var/www/html in Dockerfile

--- a/terraform/frontend/conf/nginx.conf
+++ b/terraform/frontend/conf/nginx.conf
@@ -27,7 +27,7 @@ http {
   server {
     listen       80;
     server_name  domain1.com www.domain1.com;
-    root         html;
+    root         /var/www/html;
 
     location ~ \.php$ {
       fastcgi_pass   127.0.0.1:1025;
@@ -35,3 +35,4 @@ http {
   }
 
 }
+
