--- a/terraform/frontend/Dockerfile
+++ b/terraform/frontend/Dockerfile
@@ -4,4 +4,10 @@ COPY conf/nginx.conf /etc/nginx/nginx.conf
 
 COPY conf/mime.types /etc/nginx/conf/mime.types
 
+COPY conf/mime.types /etc/nginx/conf/mime.types
+
+COPY ../src /var/www/html
+
 RUN mkdir -p /run/nginx
+
+EXPOSE 80
