use php service load balancer and port 80

--- a/terraform/frontend/conf/nginx.conf
+++ b/terraform/frontend/conf/nginx.conf
@@ -30,7 +30,8 @@ http {
     root         /var/www/html;
 
     location ~ \.php$ {
-      fastcgi_pass   127.0.0.1:1025;
+      # ELB internal services are configured to listen on port 80 by default on segmentio
+      fastcgi_pass   php:80;
     }
   }
 
