add 'fastcgi_params' and 'php' nginx include files
add backend sources dir

--- a/terraform/frontend/conf/nginx.conf
+++ b/terraform/frontend/conf/nginx.conf
@@ -29,9 +29,8 @@ http {
     server_name  domain1.com www.domain1.com;
     root         /var/www/html;
 
-    location ~ \.php$ {
-      # ELB internal services are configured to listen on port 80 by default on segmentio
-      fastcgi_pass   php:80;
+    location / {
+      include php;
     }
   }
 
